--- a/index.html
+++ b/index.html
@@ -9,15 +9,18 @@
 </head>
 
 <body>
-    <label for="city">Enter city name: </label>
-    <input type="text" placeholder="enter city" id="city">
-    <button id="submit">Retrieve weather information</button>
-    <h2 id="city-name"></h2>
-    <h3 id="temp"></h3>
-    <h3 id="humid"></h3>
-
-    <div class="images"></div>
-
+    <h1 class="margin">Weather App</h1>
+    <div class="inp margin">
+        <label for="city">Enter city name: </label>
+        <input type="text" placeholder="enter city" id="city">
+        <button id="submit">Submit</button>
+    </div>
+    <div class="out margin">
+        <h2 id="city-name"></h2>
+        <h3 id="temp"></h3>
+        <h3 id="humid"></h3>
+        <div class="images"></div>
+    </div>
     <script src="weather_app.js"></script>
 </body>
 
